<resources>
    <string name="app_name">GoParken</string>
    <string name="button_iniciarSesion">INICIAR SESIÓN</string>
    <string name="button_registrarse">REGISTRARSE</string>
    <string name="button_iniciarFB">INICIAR CON FACEBOOK</string>
    <string name="editTxtEmail">Correo *</string>
    <string name="editTxtEmail2">Repetir correo *</string>
    <string name="editTxtPass">Contraseña *</string>
    <string name="editTxtPass2">Repetir contraseña *</string>
    <string name="buttonEnviar">ENVIAR</string>
    <string name="editTxtNombre">Nombre *</string>
    <string name="editTxtApellidos">Apellidos *</string>
    <string name="facebook_app_id">1037322849654372</string>
    <string name="cancel_login_facebook">Inicio de sesión con Facebook cancelado</string>
    <string name="error_login_facebook">Inicio de sesión con Facebook fallido</string>
    <string name="button_cerrarSesion">Cerrar Sesiòn</string>
    <string name="google_maps_key">AIzaSyC-EQ7WdjOHIwnSI0Hh6MSUKD4d5OmYv2Y</string>
    <string name="google_places_key">AIzaSyBd_knHDIc1dny3fhL_14P0cj9iZvNFNsE</string>

    <string name="map">Mapa</string>
    <string name="service">Servicios</string>
    <string name="payment">Pagos</string>
    <string name="action_profile">Perfil</string>
    <string name="promo">Promoión</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_search_place">Buscar</string>
    <string name="msg_localization">Debes permitir el acceso a tu ubicación</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="msg_location_user">¿Permitir a Go Parken utilizar la ubicación de tu dispositivo?</string>
    <string name="btn_taller">TALLERES</string>
    <string name="btn_gas">GASOLINERÍAS</string>
    <string name="btn_auto">AUTOLAVADOS</string>
    <string name="title_activity_service">ServiceActivity</string>

    <string name="terminos_y_condiciones"><a href="http://goparken.com/legal"><u>Términos y condiciones</u></a></string>
    <string name="aviso_de_privacidad"><a href="http://goparken.com/privacidad"><u>Aviso de privacidad.</u></a></string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="ingresa_datos">Ingresa tus datos</string>
    <string name="datos_cliente">Datos del Cliente</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_vehiculos">Mis Autos</string>
    <string name="btn_metodos_pago">Mètodos de Pago</string>
    <string name="txt_mis_vehiculos">Mis Autos</string>
    <string name="btn_add_vehivle">Agregar auto</string>
    <string name="datos_auto">Ingresa los datos de tu auto</string>
    <string name="edit_placa">Placa *</string>
    <string name="edit_marca">Marca *</string>
    <string name="edit_submarca">Submarca *</string>
    <string name="edit_anio">Año *</string>
    <string name="datos_tarjeta">Ingresa los datos de tu tarjeta</string>
    <string name="edit_direccion">Dirección *</string>
    <string name="edit_postal">Código Postal *</string>
    <string name="edit_estado">Estado *</string>
    <string name="edit_ciudad">Ciudad *</string>
    <string name="datos_card">Datos de la tarjeta</string>
    <string name="edit_titular">Nombre del titular *</string>
    <string name="edit_numCard">Número de la tarjeta *</string>
    <string name="edit_cvv">CVV *</string>
    <string name="edit_expCard">Fecha de expiración (MM/YY) *</string>
    <string name="datos_actualizados">Datos actualizados con éxito</string>
    <string name="error_actualizar">Ocurrio un error, por favor intente nuevamente</string>
    <string name="add_card">AGREGAR MÈTODO DE PAGO</string>
    <string name="edit_mm">MM</string>
    <string name="edit_yy">YY</string>
    <string name="btn_editar_card">EDITAR</string>
    <string name="btn_borrar_pago">BORRAR PAGO</string>
    <string name="btn_predeterminar_pago">PREDETERMINAR</string>
    <string name="lista_metodos_pago">Lista de métodos de pago</string>
    <string name="edit_nombre_auto">Nombre para el auto (opcional)</string>
    <string name="bnt_registrar_pago">REGISTRAR UNA FORMA DE PAGO</string>
    <string name="tarifa_hora">TARIFA POR HORA</string>
    <string name="tarifa_msg">Tarifas aproximadas en precio por hora</string>
    <string name="tarifa_GPmsg">TARIFA GOPARKEN</string>
    <string name="tarifa_Rmsg">TARIFA REGULAR</string>
    <string name="parking_closed">Estacionamiento cerrado</string>
    <string name="no_place">No tenemos lugar</string>
    <string name="tu_metodo_msg">Tu método de pago</string>
    <string name="btn_checkin">CHECK IN</string>
    <string name="btn_ok">OK</string>
    <string name="inst_msg">Ingresa el código del estacionamiento</string>
    <string name="btn_validar">VALIDAR</string>
    <string name="btn_checkout">CHECK OUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
