<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/button_registrarse"

            >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5">

        <EditText android:id="@+id/editTxtNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTxtNombre" />

    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5">

        <EditText android:id="@+id/editTxtApellidos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTxtApellidos" />

    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5">

        <EditText android:id="@+id/editTxtCorreo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTxtEmail" />

    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5">

        <EditText android:id="@+id/editTxtCorreoR"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTxtEmail" />

    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5">

        <EditText android:id="@+id/editTxtPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTxtPass" />

    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5">

        <EditText android:id="@+id/editTxtPassR"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTxtPass" />

    </TableRow>

    <TableRow

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonEnviar"
            android:onClick="send"
            />

    </TableRow>

</LinearLayout>

