<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.inflexionlabs.goparken.MainActivity"
    >

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_iniciarSesion"
        android:onClick="onClick"/>



    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_registrarse"
        android:onClick="onClick"
            />
    
    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnSigninWithFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/BTNSigninWithFacebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_iniciarFB"
        android:onClick="onClick"
            />



</LinearLayout>
