<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingBottom="15dp"
                android:paddingRight="50dp"
                android:paddingTop="15dp"
                android:src="@drawable/login_logo2x" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="40dp"
            card_view:cardCornerRadius="4dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/datos_auto"
                        android:textSize="30dp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <EditText
                        android:id="@+id/editNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editTxtNombre" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <EditText
                        android:id="@+id/editApellidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editTxtApellidos" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editTxtEmail" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <EditText
                        android:id="@+id/editEmail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editTxtEmail2" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="* Campo obligatorio" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_send_button"
                        android:onClick="Guardar"
                        android:text="@string/btn_guardar"
                        android:textAppearance="@style/AppTheme.TextAppearance.Bold"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </ScrollView>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>

