<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_services"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="30dp"
        android:elevation="40dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <Button
                android:id="@+id/btnAutolavado"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_send_button"
                android:onClick="onClick"
                android:text="@string/btn_auto"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnGasolineria"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_send_button"
                android:onClick="onClick"
                android:text="@string/btn_gas"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnTaller"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_send_button"
                android:onClick="onClick"
                android:text="@string/btn_taller"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>